formatting change (capitalization for crime in chicago)

--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -59,10 +59,11 @@
 					<h2>Tools & Methods</h2>
 					<ul>
 						<li>Python (pandas, numpy, statsmodels, matplotlib)</li>
-                        <li>Structured Query Language</li>
-						<li>Exploratory Data Analysis</li>
-						<li>Data Cleaning, Merging, & Filtering</li>
-                        <li>Advanced Regression Analysis</li>
+                        <li>SQL</li>
+						<li>Exploratory data analysis</li>
+						<li>Data cleaning, merging, & filtering</li>
+                        <li>Advanced regression analysis</li>
+						<li>Research</li>
 					</ul>
                     <h2>Additional Contributors</h2>
                     <ul>
