music page edits

--- a/mymusic.html
+++ b/mymusic.html
@@ -50,7 +50,9 @@
         
         <section style="margin-bottom: 3rem;">
             <h2 class = poem-snapshot-title>Windows</h2>
-            <p>Windows is one of the first songs I ever wrote. It was during the pandemic when I was in high school and is meant to highlight how lonely you feel when you look into the windows of other people's lives instead of actively being a part of them.</p>
+            <p>
+              Windows was written during the height of the COVID-19 pandemic. It explores the feeling of loneliness that comes from watching others’ lives from a distance without being able to be a part of them.
+            </p>
             <iframe
               src="https://open.spotify.com/embed/track/10d0M8hJIf5SvvsS7jCDSC?utm_source=generator"
               style="border-radius:12px"
@@ -64,7 +66,9 @@
 
         <section style="margin-bottom: 3rem;">
             <h2 class = poem-snapshot-title>Dandelion</h2>
-            <p>I wrote this piece after reading Ray Bradbury's work "Fahrenheit 451". Despite not enjoying the book, it left quite an impression on me, and this song is meant to show how love and emotion are what make life worth living.</p>
+            <p>
+              This piece was inspired by Ray Bradbury’s novel <em>Fahrenheit 451</em>. The song reflects how love and emotion are essential to the human experience and what truly make life meaningful.
+            </p>
             <iframe
               src="https://open.spotify.com/embed/track/2sytcJL0Q8ZT59bATZlBrk?utm_source=generator"
               style="border-radius:12px"
