final changes to aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,32 +63,27 @@
 
           <aside id="sidebar">
             <h2>Hello!</h2>
-            <p>
-              I’m Faith, a junior at Cornell University studying Economics and Data Science. When I’m not diving into numbers or code, I love telling stories — through poetry, music, and writing.
+            <p class = poem-snapshot>
+              I’m Faith, a junior at Cornell University studying Economics and Data Science. 
             </p>
-            <p>
-              For me, creativity and analysis go hand in hand, shaping how I see and share the world.
+            <p class = poem-snapshot>
+              I admire how creativity and analysis go hand in hand, and I enjoy finding the small everyday things that make life interesting.
             </p>
           </aside>
 
           <section id="main-content">
-            <h2>My Journey</h2>
+            <h2>My Background</h2>
             <p>
-              I grew up fascinated by both the arts and sciences, which led me to explore a unique blend of data projects and creative expression. Whether it’s composing music inspired by history or analyzing social trends through data, I’m passionate about uncovering stories in every form.
+              I grew up in New Jersey before moving to Hong Kong for a couple of years and then returning to the U.S. to complete high school. My unconventional education has given me a unique perspective that influences how I approach both academic work and creative projects. I learned how to adapt to change and embrace new experiences, which continues to shape my outlook today. I have always wanted to bring together my creativity and my interest in STEM, and data science feels like the best way for me to do that.
             </p>
+            <h2>Looking Forward</h2>
             <p>
-              Outside of academics, I enjoy badminton, composing music, and following the Premier League. These interests keep me balanced and inspired.
-            </p>
-            <h2>What Writing Means to Me</h2>
-            <p>
-              Writing is a way to connect deeply — with myself, with others, and with ideas bigger than me. It’s both a refuge and a way to challenge how I think and feel.
-            </p>
-            <p>
-              This website is a reflection of that journey, a place where I share my passions and projects, and invite you to explore them with me.
+              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities at the intersection of consulting and tech. I hope that my learning and the work that I do will drive positive change, whether through business, data science, or music.
             </p>
             <p>
               Thanks for stopping by!
             </p>
+            <span class="image main"><img src="images/actualpicofme.jpg" alt="assumptions" /></span>
             <p><a href="index.html" class="button">← Home</a></p>
           </section>
 
