--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/gambling-4178466_1280.jpg" alt="" />
 									</span>
 									<a href="gamblingbehaviorsinadolescents.html">
 										<h2>Gambling Behavior in High School Students</h2>
