--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/dawn-1840298_1280.jpg" alt="" />
 									</span>
 									<a href="educationandfutureearnings.html">
 										<h2>The Impact of Undergraduate Education on Future Earnings</h2>
