finished customizing images

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/architecture-1869211_1280.jpg" alt="" />
 									</span>
 									<a href="crimeinChicago.html">
 										<h2>Crime in Chicago</h2>
@@ -105,7 +105,7 @@
 							<section class="tiles">
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/IMG_1841.jpg" alt="" />
 									</span>
 									<a href="mymusic.html">
 										<h2>My Music</h2>
@@ -116,7 +116,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/notes-1734491_1280.jpg" alt="" />
 									</span>
 									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
@@ -127,7 +127,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/headshot2.jpeg" alt="" />
 									</span>
 									<a href="aboutme.html">
 										<h2>About Me</h2>
