--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 										<h2>Gambling Behavior in High School Students</h2>
 										<div class="content">
 											<p>
-												In this project, I explore both innate factors like gender and age and environmental factors like socioeconomic status to analyze their influence on gambling behavior in high school students. Using regression analysis and EDA, I examine which factors significantly influence gambling behavior to inform policy decisions and improve prevention efforts.
-											</p>
+												In this project, I explored how innate factors (such as gender and age) and environmental factors (such as socioeconomic status) influence gambling behavior in high school students.
 										</div>
 									</a>
 								</article>
@@ -78,7 +77,7 @@
 									<a href="educationandfutureearnings.html">
 										<h2>The Impact of Undergraduate Education on Future Earnings</h2>
 										<div class="content">
-											<p>In this term paper, I analyze how factors like university choice, tuition, enrollment, diversity impact mid-career salaries. Using regression models, data cleaning, and visualization, I explore the possibility of predicting future financial outcomes based on undergraduate university characteristics.
+											<p>In this project, I analyzed how factors like university choice, tuition, enrollment, diversity, and more impact mid-career salaries. I also explored predicting future financial outcomes based on undergraduate university characteristics.
 											</p>
 										</div>
 									</a>
@@ -90,7 +89,7 @@
 									<a href="crimeinChicago.html">
 										<h2>Crime in Chicago</h2>
 										<div class="content">
-											<p>This research project examines how educational attainment, race, and seasonal factors influence gun violence rates and victimization risks, using regression models to analyze yearly trends, racial disparities, and monthly variations in gun-related incidents.</p>
+											<p>This data science project examined how educational attainment, race, and seasonal factors influence gun violence rates and victimization risks in Chicago, using regression models to analyze trends, racial disparities, and monthly variations in gun-related incidents.</p>
 										</div>
 									</a>
 								</article>
@@ -110,7 +109,7 @@
 									<a href="mymusic.html">
 										<h2>My Music</h2>
 										<div class="content">
-											<p>Snapshots of some music that I've written across the years.</p>
+											<p>Snapshots of some music that I have written throughout the years</p>
 										</div>
 									</a>
 								</article>
@@ -121,7 +120,7 @@
 									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
 										<div class="content">
-											<p>Poetry & song lyrics</p>
+											<p>Original poems & song lyrics</p>
 										</div>
 									</a>
 								</article>
