finished project 1 text refinements

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									<a href="mymusic.html">
 										<h2>My Music</h2>
 										<div class="content">
-											<p>Snapshots of some music that I have written throughout the years</p>
+											<p>Snapshots of some music that I have written throughout the years.</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
 										<div class="content">
-											<p>Original poems & song lyrics</p>
+											<p>Originaloems & song lyrics</p>
 										</div>
 									</a>
 								</article>
