adding more images

--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -47,18 +47,25 @@
 			<div id="main">
 				<div class="inner">
 					<h1>Crime in Chicago</h1>
+					<h2>
+						Project Overview
+					</h2>
 					<p>
-						Gun violence remains a critical issue in the United States, with 118 daily deaths in 2023 and Americans facing a gun-related death rate 25 times higher than other high-income countries. This project focuses on Chicago, a city with notably high levels of gun violence, recording 2,684 shooting victimizations in 2023 alone. The research investigates trends in Chicago gun crime from 2010 to 2023, analyzing how factors such as racial composition, educational attainment, age, sex, and geographic location relate to its prevalence. Data from the Chicago Data Portal on gunshot injuries, crime categories, and locations were combined with over eight Chicago Public Schools datasets to explore the relationship between educational outcomes and violent crime. By examining these variables together, the study aims to provide a comprehensive understanding of gun violence determinants in Chicago and offer insights on targeting resources to high-risk neighborhoods. All data used are publicly available through the City of Chicago’s Data Portal, established in 2012 to enhance access to government data
+						Gun violence remains a critical issue in the United States, with 118 daily deaths in 2023 and Americans facing a gun-related death rate 25 times higher than other high-income countries. This project focused on Chicago, a city with notably high levels of gun violence, recording 2,684 shooting victimizations in 2023 alone. The research investigated trends in Chicago gun-related crime incidents from 2010 to 2023, analyzing how factors such as racial composition, educational attainment, age, sex, and geographic location are correlated with its prevalence. Data from the Chicago Data Portal on gunshot injuries, crime categories, and locations was combined with over eight Chicago Public Schools datasets to explore the relationship between educational outcomes and violent crime. By examining these variables together, we aimed to provide a comprehensive understanding of gun violence determinants in Chicago and offer insights on targeting resources to high-risk neighborhoods. All data used are publicly available through the City of Chicago’s Data Portal, established in 2012 to enhance access to government data.
 					</p>
                     <p>
-						The data cleaning process was complex and involved multiple steps. Initially, all raw datasets were imported. The main gun violence dataset was standardized by normalizing category labels, separating datetime fields, and removing irrelevant columns. Eight school datasets spanning different years were then preprocessed, requiring extensive standardization due to inconsistent column names and varied performance metrics. To create comparable measures across datasets, manual rankings were developed by averaging test scores and other key metrics such as family involvement and educational attainment. These rankings were standardized by zipcode. This approach enabled a unified performance metric for analysis. Detailed procedures can be found in the data cleaning notebook.
-                    <span class="image main"><img src="images/table5include.png" alt="assumptions" /></span>
-                    <p>
-                    <span class="image main"><img src="images/table6include.png" alt="linear regression" /></span>
+						The data cleaning process was complex and involved multiple steps. Initially, all raw datasets were imported. The main gun violence dataset was standardized by normalizing category labels, separating datetime fields, and removing irrelevant columns. Eight school datasets spanning different years were then preprocessed, requiring extensive standardization due to inconsistent column names and varied performance metrics. To create comparable measures across datasets, manual rankings were developed by averaging test scores and other key metrics such as family involvement and educational attainment. These rankings were standardized by zipcode. This approach allowed us to create a unified performance metric for further analysis. 
+					<h2>
+						Exploratory Data Analysis
+					</h2>
+					<p>
+						The following visualizations display some of the most important exploratory data analysis conducted. This analysis eventually led to the creation of the research question and hypotheses. EDA was first conducted on how different demographics may be affected by major crime in Chicago. The primary motivation was to understand if key demographic metrics indeed could be used to analyze violent crime. If a metric showed a specific concentration/trend in violent crime, there would be a higher inclination to use it in research and perform regressions in the future. The following visualization shows that African Americans appear disproportionately affected by gun violence in Chicago:
+					</p>
+					<span class="image main"><img src="images/table3include.png" alt="assumptions" /></span>
 					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
 					<ul>
-						<li>Python (pandas, numpy, statsmodels, matplotlib)</li>
+						<li>Python (pandas, numpy, statsmodels, matplotlib, scikit-lear, duckdb)</li>
                         <li>SQL</li>
 						<li>Exploratory data analysis</li>
 						<li>Data cleaning, merging, & filtering</li>
