--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 									<a href="poetryshowcase.html">
 										<h2>Poetry</h2>
 										<div class="content">
-											<p>Originaloems & song lyrics</p>
+											<p>Original poems & song lyrics</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/headshot2.jpeg" alt="" />
+										<img src="images/aboutme2.jpg" alt="" />
 									</span>
 									<a href="aboutme.html">
 										<h2>About Me</h2>
