--- a/mymusic.html
+++ b/mymusic.html
@@ -67,7 +67,7 @@
         <section style="margin-bottom: 3rem;">
             <h2 class = poem-snapshot-title>Dandelion</h2>
             <p>
-              This piece was inspired by Ray Bradbury’s novel <em>Fahrenheit 451</em>. The song reflects how love and emotion are essential to the human experience and what truly make life meaningful.
+              This piece was inspired by Ray Bradbury’s novel <em>Fahrenheit 451</em>. The song reflects how love and emotion are essential to the human experience and are what make life truly meaningful.
             </p>
             <iframe
               src="https://open.spotify.com/embed/track/2sytcJL0Q8ZT59bATZlBrk?utm_source=generator"
