--- a/poetryshowcase.html
+++ b/poetryshowcase.html
@@ -46,7 +46,7 @@
 
         <section style="margin-bottom: 3rem;">
           <h2 class="poem-snapshot-title">what remains of us</h2>
-          <p class="poem-blurb">dancing is used as a metaphor for someone who crossed a personal boundary</p>
+          <p class="poem-blurb">dancing is used as a metaphor for crossing a personal boundary</p>
           <blockquote class="poem-snapshot">
         <pre>
 
@@ -66,7 +66,7 @@
 
         <section style="margin-bottom: 3rem;">
           <h2 class="poem-snapshot-title">fruit salad</h2>
-          <p class="poem-blurb">a girl doesn't realize the beauty in what she has until it's too late</p>
+          <p class="poem-blurb">a person doesn't realize the beauty in what they have until it's too late</p>
           <blockquote class="poem-snapshot">
             <pre>
 
@@ -86,7 +86,7 @@
 
         <section style="margin-bottom: 3rem;">
           <h2 class="poem-snapshot-title">House Fire</h2>
-          <p class="poem-blurb">a person's fear leads them to do things against their will</p>
+          <p class="poem-blurb">a person has fears that they do not understand</p>
           <blockquote class="poem-snapshot">
             <pre>
 
