crime in chicago changes

--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -61,7 +61,26 @@
 					<p>
 						The following visualizations display some of the most important exploratory data analysis conducted. This analysis eventually led to the creation of the research question and hypotheses. EDA was first conducted on how different demographics may be affected by major crime in Chicago. The primary motivation was to understand if key demographic metrics indeed could be used to analyze violent crime. If a metric showed a specific concentration/trend in violent crime, there would be a higher inclination to use it in research and perform regressions in the future. The following visualization shows that African Americans appear disproportionately affected by gun violence in Chicago:
 					</p>
-					<span class="image main"><img src="images/table3include.png" alt="assumptions" /></span>
+					<span class="image main"><img src="images/gunshotvrace.png" alt="assumptions" /></span>
+					<p>
+						The following visualization explores the relationship between educational attainment and crime across districts in Chicago:
+					</p>
+					<span class="image main"><img src="images/scatterplotveducation.png" alt="assumptions" /></span>
+					<h2>
+						Research Subquestions
+					</h2>
+					<p>
+						Subquestion 1: How do the months of the year differ in terms of the probability of gun violence which occurs in that month?
+					</p>
+					<p>
+						Subquestion 2: How does a zipcode's test-based academic ranking affect the frequency of gun violence in that zipcode?
+					</p>
+					<p>
+						Subquestion 3: How does the interplay between race, age group, educational attainment (measured through average test scores), and zipcode affect one's likelihood of experiencing gun violence?
+					</p>
+					<h2>
+						Key Insights
+					</h2>
 					<hr class="section-divider" />
 					<h2>Tools & Methods</h2>
 					<ul>
@@ -72,7 +91,7 @@
                         <li>Advanced regression analysis</li>
 						<li>Research</li>
 					</ul>
-                    <h2>Additional Contributors</h2>
+                    <h2>Collaborators</h2>
                     <ul>
                       <li>Abhay Gupta</li>
                       <li>Emily Fu</li>
