about me final edits

--- a/aboutme.html
+++ b/aboutme.html
@@ -74,11 +74,11 @@
           <section id="main-content">
             <h2>My Background</h2>
             <p>
-              I grew up in New Jersey before moving to Hong Kong for a couple of years and then returning to the U.S. to complete high school. My unconventional education has given me a unique perspective that influences how I approach both academic work and creative projects. I learned how to adapt to change and embrace new experiences, which continues to shape my outlook today. I have always wanted to bring together my creativity and my interest in STEM, and data science feels like the best way for me to do that.
+              My childhood was spent both in the United States and Hong Kong. My unconventional educational experiences gave me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned how to adapt to change and embrace new experiences, and I enjoy working in fast-paced, dynamic environments. I have always wanted to bring together my creativity and interest in STEM, and my projects are a reflection of that.
             </p>
             <h2>Looking Forward</h2>
             <p>
-              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities at the intersection of consulting and tech. I hope that my learning and the work that I do will drive positive change, whether through business, data science, or music.
+              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities in consulting, technology, and data analytics. I look forward to using my skills and creativity to drive positive change in my future roles.
             </p>
             <p>
               Thanks for stopping by!
