edits to home page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi, I'm Faith! This is where I share the things I've created,
-								from data projects to music, writing, and more. 
-								Feel free to explore and see what I've been working on :) </a></h1>
+								<h1>Hi, I'm Faith! 
+								</a></h1>
+								<h1>
+									This is where I share the projects I've worked on and the things I care about.
+									Feel free to explore and see what I've been working on :) 
+								</h1>
 							</header>
 							<hr class="section-divider" />
 							<h2 style="text-align: center;">Data & Analytics Projects</h2>
