word edit home page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<h1>Hi, I'm Faith! 
 								</a></h1>
 								<h1>
-									This is where I share the projects I've worked on and the things I care about.
+									This is where I share the projects I've created and the things I care about.
 									Feel free to explore and see what I've been working on :) 
 								</h1>
 							</header>
