--- a/aboutme.html
+++ b/aboutme.html
@@ -74,11 +74,11 @@
           <section id="main-content">
             <h2>My Background</h2>
             <p>
-              My childhood was spent both in the United States and Hong Kong. My unconventional educational experiences gave me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned how to adapt to change and embrace new experiences, and I enjoy working in fast-paced, dynamic environments. I have always wanted to bring together my creativity and interest in STEM, and my projects are a reflection of that.
+              Growing up, I had the opportunity to be homeschooled in both the United States and Hong Kong before returning to the US for high school. My unconventional educational experiences have really given me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned how to adapt to change and embrace new experiences, and I thrive in fast-paced, dynamic environments. It is my goal to bring together my creativity and interest in STEM, and my projects are a reflection of that.
             </p>
             <h2>Looking Forward</h2>
             <p>
-              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities in consulting, technology, and data analytics. I look forward to using my skills and creativity to drive positive change in my future roles.
+              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities in consulting, technology, and data analytics. I look forward to using my skills and creativity to drive positive change in future roles.
             </p>
             <p>
               Thanks for stopping by!
